# orca-rs

./: .cz.toml  Cargo.toml  README.md  pyproject.toml
orca_rs/: __init__.py  orca_rs.pyi
orca_rs/outputs/: casscf.py  tddft.pyi
src/: lib.rs
src/outputs/: casscf.rs  mod.rs  outputs.rs  tddft.rs
src/parser/: mod.rs  parser.rs
src/parsers/: casscf.rs  mod.rs  parsers.rs  soc.rs  tddft.rs
tests/: read_file.rs  test_parse.py  test_something.rs
tests/data/: ch2o_soc_tddft.out  matrix.out
